syntax = "proto3";
package bitway.lending;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "bitway/lending/lending.proto";
import "bitway/lending/params.proto";

option go_package = "github.com/bitwaylabs/bitway/x/lending/types";

// Msg defines the Msg service.
service Msg {
    option (cosmos.msg.v1.service) = true;

    rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);
    rpc AddLiquidity(MsgAddLiquidity) returns (MsgAddLiquidityResponse);
    rpc RemoveLiquidity(MsgRemoveLiquidity) returns (MsgRemoveLiquidityResponse);
    rpc UpdatePoolConfig(MsgUpdatePoolConfig) returns (MsgUpdatePoolConfigResponse);
    rpc Apply(MsgApply) returns (MsgApplyResponse);
    rpc SubmitCets(MsgSubmitCets) returns (MsgSubmitCetsResponse);
    rpc SubmitDepositTransaction(MsgSubmitDepositTransaction) returns (MsgSubmitDepositTransactionResponse);
    rpc Redeem(MsgRedeem) returns (MsgRedeemResponse);
    rpc Repay(MsgRepay) returns (MsgRepayResponse);
    rpc RegisterReferrer(MsgRegisterReferrer) returns (MsgRegisterReferrerResponse);
    rpc UpdateReferrer(MsgUpdateReferrer) returns (MsgUpdateReferrerResponse);

    // UpdateParams defines a governance operation for updating the x/lending module
    // parameters. The authority defaults to the x/gov module account.
    //
    // Since: cosmos-sdk 0.47
    rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

message MsgCreatePool {
    option (cosmos.msg.v1.signer) = "authority";

    // authority is the address that controls the module (defaults to x/gov unless overwritten).
    string authority = 1;
    // pool id
    string id = 2;
    // pool config
    PoolConfig config = 3 [(gogoproto.nullable) = false];
}

message MsgCreatePoolResponse{}

message MsgUpdatePoolConfig {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1;
  // pool id
  string pool_id = 2;
  // pool config
  PoolConfig config = 3 [(gogoproto.nullable) = false];
}

message MsgUpdatePoolConfigResponse {}

message MsgRepay{
    option (cosmos.msg.v1.signer) = "borrower";

    string borrower = 1;
    string loan_id = 2;
}

message MsgRepayResponse{}

message MsgAddLiquidity {
    option (cosmos.msg.v1.signer) = "lender";

    string lender = 1;
    string pool_id = 2;
    cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
}

message MsgAddLiquidityResponse {}

message MsgRemoveLiquidity {
    option (cosmos.msg.v1.signer) = "lender";

    string lender = 1;
    cosmos.base.v1beta1.Coin ytokens = 2 [(gogoproto.nullable) = false, (gogoproto.customname) = "YTokens"];
}

message MsgRemoveLiquidityResponse {}

message MsgApply {
    option (cosmos.msg.v1.signer) = "borrower";

    string borrower = 1;
    string borrower_pubkey = 2;
    string borrower_auth_pubkey = 3;
    string pool_id = 4;
    cosmos.base.v1beta1.Coin borrow_amount = 5 [(gogoproto.nullable) = false];
    int64 maturity = 6;
    uint64 dcm_id = 7 [(gogoproto.customname) = "DCMId"];
    string referral_code = 8;
}

message MsgApplyResponse {}

message MsgSubmitCets {
    option (cosmos.msg.v1.signer) = "borrower";

    string borrower = 1;
    string loan_id = 2;
    repeated string deposit_txs = 3;
    string liquidation_cet = 4;
    repeated string liquidation_adaptor_signatures = 5;
    repeated string default_liquidation_adaptor_signatures = 6;
    string repayment_cet = 7;
    repeated string repayment_signatures = 8;
}

message MsgSubmitCetsResponse {}

message MsgSubmitDepositTransaction {
    option (cosmos.msg.v1.signer) = "relayer";
    
    string relayer = 1;
    string vault = 2;
    string deposit_tx = 3;
    string block_hash = 4;
    repeated string proof = 5;
}

message MsgSubmitDepositTransactionResponse {}

message MsgRedeem {
    option (cosmos.msg.v1.signer) = "borrower";
    
    string borrower = 1;
    string loan_id = 2;
    string tx = 3;
    repeated string signatures = 4;
}

message MsgRedeemResponse {}

// MsgRegisterReferrer is the Msg/RegisterReferrer request type.
message MsgRegisterReferrer {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1;
  // Optional referrer name
  string name = 2;
  // Unique referral code with 8 alphanumeric characters
  string referral_code = 3;
  // Referrer address
  string address = 4;
  // Referral fee factor
  string referral_fee_factor = 5 [
      (cosmos_proto.scalar)  = "cosmos.Dec",
      (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
      (gogoproto.nullable)   = false
    ];
}

// MsgRegisterReferrerResponse defines the Msg/RegisterReferrer response type.
message MsgRegisterReferrerResponse {}

// MsgUpdateReferrer is the Msg/UpdateReferrer request type.
message MsgUpdateReferrer {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1;
  // new referrer name
  string name = 2;
  // Unique referral code with 8 alphanumeric characters
  string referral_code = 3;
  // new referrer address
  string address = 4;
  // new referral fee factor
  string referral_fee_factor = 5 [
      (cosmos_proto.scalar)  = "cosmos.Dec",
      (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
      (gogoproto.nullable)   = false
    ];
}

// MsgUpdateReferrerResponse defines the Msg/UpdateReferrer response type.
message MsgUpdateReferrerResponse {}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1;

  // params defines the x/dlc parameters to be updated.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the Msg/UpdateParams response type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}